# Multi-Level-BO-w-Hierarchical-CG

./: .gitignore  README.md  molecules-single-level.json  molecules.json  requirements.txt
1_bead_types/: bead-types.json  enumeration-size-analysis.ipynb  force-fields.ipynb  mapping.json  martini3-oco-w.csv  prepare-bead-types.ipynb
2_molecule_enumeration/: 1_generate-molecules.ipynb  2_insert-latent-space.ipynb  3_insert-parents.ipynb  4_index-latent-space.ipynb  neighbor-check.ipynb
3_autoencoder/: evaluate.ipynb  training.ipynb
4_membrane_setup/: equilibration.mdp  generate_membrane.py  minimization.mdp
5_optimize/: analysis-molecular-features.ipynb  analysis-neighborhoods.ipynb  analysis_helper.py  initialize-single-level.ipynb  initialize.ipynb  molecules-single-level.list  molecules.list  optimize-single-level.py  optimize.py  optimize_helper.py  (+2 more)
chespex/: README.md  pyproject.toml  setup.py
chespex/chespex/encoding/: __init__.py  autoencoder.py  decoder.py  decoder_single_edge.py  encoder.py  loss.py  model_helper.py  train.py
chespex/chespex/molecules/: __init__.py  molecule.py  molecule_generator.py
chespex/chespex/molecules/bonds/: bondgenerator.cpp  graph.cpp  iterate.cpp  iterate.h  test_bondsmodule.py
chespex/chespex/optimization/: __init__.py  data_frame.py  gaussian_process.py
chespex/chespex/simulation/: __init__.py  helper.py  simulation.py  simulator.py
chespex/tests/: test_bond_generator.py  test_data_frame.py  test_gaussian_process.py  test_molecule_generator.py  test_molecules.py
chespex/tutorials/: molecule_generation.ipynb
(+22 files in other folders)
